# fastapi-media-stuff

./: Makefile  README.md  app.py  pyproject.toml
